Create form element in index.html. Populate results on webpage based on searchInput.value.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Wiki Search</title>
   </head>
   <body>
+    <form>
+      <input class="searchInput" type="search"></input>
+      <input type="submit" value="Search"></input>
+    </form>
     <ul>
+
 
       <!--
         <li>
