Add comments in index.html.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   </head>
   <body>
     <form>
-      <input class="searchInput" type="search"></input>
+      <input class="searchInput" type="search" placeholder="Search Wikipedia">
+      </input>
       <input type="submit" value="Search"></input>
     </form>
+    
+    <!-- <ul> will populate based on search results. Check displayResults() in js/app.js-->
     <ul>
-
-
       <!--
         <li>
           <a href="#">Title</>
