--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
     <title>Wiki Search</title>
   </head>
   <body>
-    <form>
-      <input class="searchInput" type="search" placeholder="Search Wikipedia">
-      </input>
-      <input type="submit" value="Search"></input>
-    </form>
-    
-    <!-- <ul> will populate based on search results. Check displayResults() in js/app.js-->
-    <ul>
-      <!--
-        <li>
-          <a href="#">Title</>
-          <p>Snippet</p>
-        </li>
-      -->
-    </ul>
+    <header>
+      <form>
+        <input class="searchInput" type="search" placeholder="Search Wikipedia">
+        </input>
+        <input type="submit" value="Search"></input>
+      </form>
+    </header>
+
+    <section>
+      <!-- <ul> will populate based on search results. Check displayResults() in js/app.js-->
+      <ul>
+        <!--
+          <li>
+            <a href="#">Title</>
+            <p>Snippet</p>
+          </li>
+        -->
+      </ul>
+    </section>
+
+    <footer>
+    </footer>
 
     <script src="js/app.js"></script>
   </body>
