Add margin: 20vh on header in style.css.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Wiki Search</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -13,7 +14,7 @@
         <form>
           <input class="searchInput" type="search" placeholder="Search Wikipedia">
           </input>
-          <input type="submit" value="Search"></input>
+          <input class ="submitBtn" type="submit" value="Search"></input>
         </form>
       </header>
 
