Add 'keyup' event on searchInput. When keyup event is activated, callback function will move header to top of page and adjust styling as needed.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   </head>
   <body>
     <div class="wrap"> <!-- .wrap -->
-      <header>
+      <header class="clearfix">
         <h1 class="title">Wiki Search</h1>
         <form>
           <input class="searchInput" type="search" placeholder="Search Wikipedia">
           </input>
-          <input class ="submitBtn" type="submit" value="Search"></input>
+          <div class="buttons"> <!-- .buttons-->
+            <input class ="submitBtn" type="submit" value="Search"></input>
+            <!-- <button>Random</button>-->
+          </div> <!-- /.buttons-->
         </form>
       </header>
 
