--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lora|Roboto:300" rel="stylesheet">
   </head>
   <body>
     <div class="wrap"> <!-- .wrap -->
@@ -16,11 +17,10 @@
           <input class="searchInput" type="search" placeholder="Search Wikipedia">
           </input>
           <div class="buttons"> <!-- .buttons-->
-            <!-- <input class ="submitBtn" type="submit"></input> -->
-            <button type="submit" form="form1">
+            <button class ="submitBtn" type="submit" form="form1">
               <i class="fa fa-search" aria-hidden="true"></i>
             </button>
-            <button>
+            <button class="random">
               <i class="fa fa-random" aria-hidden="true"></i>
             </button>
           </div> <!-- /.buttons-->
