Add <a class=.random>. This will take user to a random wikipedia page.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
             <button class ="submitBtn" type="submit" form="form1">
               <i class="fa fa-search" aria-hidden="true"></i>
             </button>
-            <button class="random">
+            <a href="https://en.wikipedia.org/wiki/Special:Random/Namespace" target="_blank" class="random">
               <i class="fa fa-random" aria-hidden="true"></i>
-            </button>
+            </a>
+            <!-- <button class="random">
+              <i class="fa fa-random" aria-hidden="true"></i>
+            </button> -->
           </div> <!-- /.buttons-->
         </form>
       </header>
