Utilize module pattern to organize code.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </header>
 
       <section>
-        <!-- <ul> will populate based on search results. Check displayResults() in js/app.js-->
+        <!-- <li> will populate based on search results. Check displayResults() in js/app.js-->
         <ul>
           <!--
             <li>
