Add links to home page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <div class="wrap"> <!-- .wrap -->
       <header class="clearfix">
-        <h1 class="title">Wiki Search</h1>
+        <h1 class="title">
+          <a href="https://bd2187.github.io/Wiki-Search/">Wiki Search</a>
+        </h1>
         <form id="form1">
           <input class="searchInput" type="search" placeholder="Search Wikipedia">
           </input>
